QF: Prevent Ada background decor overflowing page

--- a/src/scss/cs/finder.scss
+++ b/src/scss/cs/finder.scss
@@ -6,7 +6,7 @@
     content: "";
     width: 500px;
     height: 500px;
-    top: 430px;
+    top: -162px;
     left: 61%;
     background-size: cover;
     background-image: url("/assets/cs/decor/dots-circle-bg.svg");
